<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentcardviewbottomsheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:cardBackgroundColor="#00000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/bottom_sheet_bg">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-55dp">
                <ImageView
                    android:id="@+id/bottomsheetscrolldown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:contentDescription="@string/go_back"
                    android:gravity="center"
                    android:maxWidth="24dp"
                    android:maxHeight="24dp"
                    android:src="@drawable/icon_minimize"
                    app:tint="@android:color/darker_gray"/>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price"
                        android:textAlignment="viewStart"
                        android:textColor="#5e5e5e"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bus_pass_validity"
                        android:textAlignment="viewEnd"
                        android:textColor="#5e5e5e"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/passprice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-10dp"
                        android:layout_marginEnd="40dp"
                        android:layout_weight="0.5"
                        android:drawablePadding="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/price"
                        android:textColor="#000"
                        android:textSize="35sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/passvalidity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="-60dp"
                        android:layout_weight="0.5"
                        android:text="@string/validity_n_text"
                        android:textAlignment="viewEnd"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat"
                        android:singleLine="true"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="#D6D6D6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtbenefits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/benefits"
                        android:layout_gravity="center_vertical"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        app:drawableStartCompat="@drawable/icon_star" />

                    <TextView
                        android:id="@+id/benefit1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/benefit_1"
                        android:textColor="#000"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/bullet_point" />

                    <TextView
                        android:id="@+id/benefit2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/benefit_2"
                        android:textColor="#000"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/bullet_point" />

                    <TextView
                        android:id="@+id/benefit3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/benefit_3"
                        android:textColor="#000"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/bullet_point" />

                    <TextView
                        android:id="@+id/benefit4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/benefit_4"
                        android:textColor="#000"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/bullet_point" />

                    <TextView
                        android:id="@+id/benefit5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/benefit_5"
                        android:textColor="#000"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/bullet_point" />

                    <TextView
                        android:id="@+id/benefit6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/benefit_6"
                        android:textColor="#000"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/bullet_point" />

                    <TextView
                        android:id="@+id/benefit7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/benefit_7"
                        android:textColor="#000"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/bullet_point" />

                    <TextView
                        android:id="@+id/benefit8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/benefit_8"
                        android:textColor="#000"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/bullet_point" />

                    <TextView
                        android:id="@+id/benefit9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/benefit_9"
                        android:textColor="#000"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/bullet_point" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:background="#D6D6D6" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:padding="10dp"
        android:background="@color/white">

        <Button
            android:id="@+id/btnbuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_buspass_gradient"
            android:padding="5dp"
            android:text="@string/buy_now"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@null"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
