<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootUserProfileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7fafb"
    tools:context=".ProfileFragment"
    android:orientation="vertical">

    <!--    android:background="#EDEDED"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_round_image_holder"
                android:backgroundTint="@color/white"
                android:maxWidth="120dp"
                android:maxHeight="120dp"
                android:src="@drawable/icon_user_account_circle"
                app:civ_border_color="@color/white"
                app:civ_border_width="3dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:paddingHorizontal="10dp">


                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textColor="@color/main_500"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_go_to_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_button_profile"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:backgroundTint="#2B2B2B"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/icon_arrow_next"
            android:drawableTint="@color/white"
            android:drawableLeft="@drawable/icon_pencil_square"
            />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_profile_bus_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button_profile"
                android:text="@string/your_bus_pass"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/main_500"
                android:textSize="17sp"
                app:backgroundTint="@color/white"
                android:drawableLeft="@drawable/icon_bus_pass"
                android:drawableRight="@drawable/icon_next"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f0f0f0"
                android:layout_margin="5dp"/>


            <Button
                android:id="@+id/btn_profile_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_profile"
                android:text="@string/your_wallet"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/main_500"
                android:textSize="17sp"
                app:backgroundTint="@color/white"
                android:drawableLeft="@drawable/icon_wallet_green"
                android:drawableRight="@drawable/icon_next"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f0f0f0"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/btn_profile_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_profile"
                android:text="@string/change_password"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/main_500"
                android:textSize="17sp"
                app:backgroundTint="@color/white"
                android:drawableLeft="@drawable/icon_reset_password"
                android:drawableRight="@drawable/icon_next"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        app:cardElevation="8dp">

        <Button
            android:id="@+id/btn_profile_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_button_profile"
            android:paddingHorizontal="20dp"
            android:text="@string/logout"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/backup_main_700"
            android:textSize="17sp"
            app:backgroundTint="@color/white"
            android:layout_marginHorizontal="10dp"
            android:drawableTint="@color/backup_main_700"
            android:drawableLeft="@drawable/icon_logout"
            android:drawableRight="@drawable/icon_arrow_next"
            />


    </androidx.cardview.widget.CardView>

</LinearLayout>
