<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    >
    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:focusable="true"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textSize="25sp"
                android:fontFamily="@font/gt_america_standard_bold"
                android:textColor="@color/main_500"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_change_current_password"
                style="@style/textInputLayout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_current_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/main_500"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/change_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#0E1625"
                    android:drawableStart="@drawable/icon_password"
                    android:drawablePadding="10dp"
                    android:textSize="13dp"
                    android:fontFamily="@font/gt_america_standard_regular"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_change_new_password"
                style="@style/textInputLayout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/main_500"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/change_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#0E1625"
                    android:textSize="13dp"
                    android:drawableStart="@drawable/icon_password"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/gt_america_standard_regular"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_change_new_confirm_password"
                style="@style/textInputLayout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_confirm_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/main_500"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/change_new_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#0E1625"
                    android:textSize="13dp"
                    android:drawableStart="@drawable/icon_password"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/gt_america_standard_regular"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_change_password_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/change_password"
                android:textAlignment="center"
                style="@style/button_style"
                app:backgroundTint="@null"
                android:background="@drawable/bg_change_password_button"
                android:enabled="true"
                android:drawableTint="@color/white"
                android:drawableLeft="@drawable/icon_pencil_square"
                android:paddingStart="30dp"
                android:paddingEnd="30dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>



